# Pukhto_Pashto

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE_POLICY.md  PROJECT_PURPOSE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release_template.md
asr/: README.md
benchmarks/: README.md
community/: COMMUNICATION.md  RECOGNITION.md
data/: README.md
docs/: README.md  _config.yml  backlink_strategy.md  common_voice_pashto_24.md  dataset_guidelines.md  discoverability_seo.md  github_operations.md  github_topics_checklist.md  index.md  pashto_asr.md  pashto_datasets.md  pashto_normalization_v0.1.md  pashto_tts.md  platform_sync_policy.md  platforms.md  release_checklist.md  release_process.md  release_v0.1.1.md  release_v0.1.2.md  resource_automation.md  resource_catalog.md  resource_cycle_runbook.md  robots.txt  workstreams.md
experiments/: README.md
models/: README.md
resources/: README.md
scripts/: README.md  audit_resource_pipeline.py  check_links.py  generate_resource_views.py  promote_candidates.py  resource_quality.py  review_existing_resources.py  run_resource_cycle.py  sync_resources.py  validate_normalization.py  validate_repo_contracts.py  validate_resource_catalog.py
tests/: test_audit_resource_pipeline.py  test_generate_resource_views.py  test_promote_candidates.py  test_review_existing_resources.py  test_sync_resources.py  test_validate_normalization.py  test_validate_repo_contracts.py  test_validate_resource_catalog.py  (+1 more)
(+48 files in other folders)
